Added sorting and styles to index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,11 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+ .ascending{
+    background-color: burlywood;
+ }
+
+ .descending{
+    background-color: cadetblue;
+ }
