--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,12 +1,14 @@
 <% content_for :title, "Editing movie" %>
 
-<h1>Editing movie</h1>
+<div class="centered default-border">
+  <h1 class="large-red-text">Editing movie</h1>
 
-<%= render "form", movie: @movie %>
+  <%= render "form", movie: @movie %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this movie", @movie %> |
-  <%= link_to "Back to movies", movies_path %>
+  <div class="large-links">
+    <%= link_to "Show this movie", @movie %> |
+    <%= link_to "Back to movies", movies_path %>
+  </div>
 </div>
