--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,9 +4,9 @@
 
 <h1>Movies</h1>
 
-<table>
+<table class="default-border">
   <thead>
-    <tr>
+    <tr class="cursive">
       <th class="<%= 'ascending' if params[:sort] == "title" && params[:direction] == 'asc' %> 
       <%= 'descending' if params[:sort] == "title" && params[:direction] == 'desc' %>"
       >
