--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= render @movie %>
 
-<div>
+<div class="big-top-padding large-links">
   <%= link_to "Edit this movie", edit_movie_path(@movie) %> |
   <%= link_to "Back to movies", movies_path %>
 
