--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id movie %>">
+<div id="<%= dom_id movie %>" style="border: 2px solid blue">
   <p>
     <strong>Title:</strong>
     <%= movie.title %>
