--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,11 +1,13 @@
 <% content_for :title, "New movie" %>
 
-<h1>New movie</h1>
+<div class="centered default-border">
+  <h1 class="cursive" style="font-size: 50px">New movie</h1>
 
-<%= render "form", movie: @movie %>
+  <%= render "form", movie: @movie %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to movies", movies_path %>
+  <div class="large-links">
+    <%= link_to "Back to movies", movies_path %>
+  </div>
 </div>
